<resources>
    <string name="app_name">TaskMaster</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_task">My Tasks</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task">ADD TASK</string>
    <string name="task_title">Task title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_description">Task Description</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="lorem">
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
    </string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="set_your_username_from_settings">Set Your Username from settings</string>
    <string name="tasks">Tasks</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="add_task_toast_text">Task has been added</string>

    <string-array name="team_names_array">
        <item>TeamA</item>
        <item>TeamB</item>
        <item>TeamC</item>
    </string-array>


    <!--    for sign up , sign in-->

    <!--    <string name="app_name">Login and SignUp ScreenDesign Demo</string>-->
    <string name="hello_world">Hello world!</string>
    <!--    <string name="action_settings">Settings</string>-->
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign Out</string>
    <string name="choose">Choose</string>
</resources>