<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.296" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttonAddTask"
    android:text="@string/add_task"
    android:background="@color/blue"
    android:layout_marginTop="200dp"
    app:layout_constraintTop_toBottomOf="@id/textViewTitle"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="70dp"
    tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAllTasks"
        android:text="@string/all_tasks"
        android:background="@color/blue"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="70dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonTask1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="72dp"
        android:background="@color/blue"
        android:text="@string/task_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddTask" />

    <Button
        android:id="@+id/buttonTask2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="72dp"
        android:background="@color/blue"
        android:text="@string/task_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAllTasks" />

    <Button
        android:id="@+id/buttonTask3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="72dp"
        android:background="@color/blue"
        android:text="@string/task_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAllTasks" />

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="28dp"
        app:srcCompat="@android:drawable/ic_menu_manage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>