<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <TextView
        android:id="@+id/textViewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="41dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="17dp" />

    <TextView
        android:id="@+id/textViewTaskDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskTitle"
        tools:layout_conversion_absoluteHeight="118dp"
        tools:layout_conversion_absoluteWidth="376dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="49dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskDetails"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="17dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTaskDetails"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="17dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>