<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/add_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/black"
        android:background="#ddd"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/textViewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/task_title"
        app:layout_constraintBottom_toBottomOf="@id/editTextTaskTitle"
        app:layout_constraintRight_toLeftOf="@id/editTextTaskTitle" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:id="@+id/editTextTaskDescription"
        android:layout_marginTop="64dp"
        android:textColor="@color/black"
        android:background="#ddd"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTaskDescription"
        android:text="@string/task_description"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toLeftOf="@id/editTextTaskDescription"
        app:layout_constraintBottom_toBottomOf="@id/editTextTaskDescription"
        />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:background="@color/blue"
        android:layout_marginTop="120dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>